--- a/java-collections-ru/lists_28.07.23_20.28.56/build.gradle
+++ b/java-collections-ru/lists_28.07.23_20.28.56/build.gradle
@@ -1,10 +1,14 @@
 plugins {
   id 'java'
   id 'com.adarshr.test-logger' version '2.1.1'
+  id 'checkstyle'
 }
 
 repositories {
   mavenCentral()
+}
+checkstyle {
+  toolVersion '8.41'
 }
 
 dependencies {
@@ -23,4 +27,13 @@ testlogger {
 
 tasks.withType(JavaCompile) {
   options.encoding = "UTF-8"
+  task checkExercises (type: Checkstyle) {
+    file('.').eachDir { course ->
+      def exercise = project.hasProperty('exercise') ? project.exercise : ''
+      source course.name + '/' + exercise
+      include '**/*.java'
+      exclude '**/build/**'
+      classpath = files()
+    }
+  }
 }
